server/compilers/goLiteJS/src/test/ml1/invalid/slice10.go
// missing right bracket in slice declaration
package main

var x [int
